@@ -1,0 +1,6 @@
+;; @package   AkeebaSocialLogin
+;; @copyright Copyright (c)2016-2023 Nicholas K. Dionysopoulos / Akeeba Ltd
+;; @license   GNU General Public License version 3, or later
+
+PLG_SOCIALLOGIN_PAYPAL = "Akeeba Social Login - PayPal integration"
+PLG_SOCIALLOGIN_PAYPAL_DESCRIPTION = "Allows social login with PayPal accounts."
